--- a/MobdatRTI/OpenSimFederate/.classpath
+++ b/MobdatRTI/OpenSimFederate/.classpath
@@ -2,10 +2,8 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="C:/Program Files/Portico/portico-2.0.1/lib/portico.jar" sourcepath="C:/Users/Arthur Valadares/Copy/Projects/UrbanSim/Resources/portico/codebase/src/java/portico">
-		<attributes>
-			<attribute name="javadoc_location" value="file:/C:/Program%20Files/Portico/portico-2.0.1/documentation/javadoc/ieee1516e/"/>
-		</attributes>
-	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/Bruno/Documents/GitHub/urbansim/Resources/portico.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Bruno/Documents/GitHub/urbansim/Resources/jackson-all-1.9.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Bruno/Documents/GitHub/urbansim/Resources/json-20141113.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
